BB-4205: Fix home page styles - fix products slider arrows align(center related to product image)

--- a/src/Oro/Bundle/ProductBundle/Resources/public/default/scss/components/featured-products/featured-products.scss
+++ b/src/Oro/Bundle/ProductBundle/Resources/public/default/scss/components/featured-products/featured-products.scss
@@ -1,3 +1,9 @@
+$grid-gutter-width: 30px;
+$embedded-edge: 84px;
+$slick-gap-width: 27px;
+$slick-slide-count: 4;
+$image-holder-max-height: 249px;
+
 .featured-products {
     & .embedded-list {
         margin: 0 42px;
@@ -6,6 +12,20 @@
     & .embedded-list__label {
         margin-left: -42px;
         margin-right: -42px;
+    }
+
+    & .embedded-list__container--slider {
+        & .slick-arrow {
+            top: calc(((100vw - #{$grid-gutter-width + $embedded-edge}) / #{$slick-slide-count} - #{$slick-gap-width}) / 2);
+
+            margin-top: 24px;
+
+            transform: translate(0, -50%);
+
+            @media screen and (min-width: ($image-holder-max-height + $slick-gap-width) * $slick-slide-count + $embedded-edge + $grid-gutter-width) {
+                top: $image-holder-max-height / 2;
+            }
+        }
     }
 
     & .embedded-list__item {
